tests/compile_fail/effectful_stateful_input_mismatch.stderr
error[E0277]: the effectful stateful handler's `Input` does not match the stage arrow input
  --> tests/compile_fail/effectful_stateful_input_mismatch.rs:16:13
   |
16 |       let _ = obzenflow_dsl::effectful_stateful!(
   |  _____________^
17 | |         OtherInput -> First => StatefulFirstOnly,
18 | |         effects: [],
19 | |         middleware: []
20 | |     );
   | |     ^
   | |     |
   | |_____this handler cannot consume the fact type declared before `->`
   |       required by a bound introduced by this call
   |
help: the trait `EffectfulStatefulInputMatchesArrow<OtherInput>` is not implemented for `support::Input`
  --> tests/compile_fail/support/typed_effectful.rs
   |
   | pub struct Input;
   | ^^^^^^^^^^^^^^^^
   = note: the handler's `type Input` is authoritative: use that fact type before `->`, or attach a handler whose `Input` matches the arrow (FLOWIP-120z B9)
note: required by a bound in `__obzenflow_assert_effectful_stateful_contract`
  --> tests/compile_fail/effectful_stateful_input_mismatch.rs:16:13
   |
16 |       let _ = obzenflow_dsl::effectful_stateful!(
   |  _____________^
17 | |         OtherInput -> First => StatefulFirstOnly,
18 | |         effects: [],
19 | |         middleware: []
20 | |     );
   | |     ^
   | |     |
   | |_____required by a bound in this function
   |       required by this bound in `__obzenflow_assert_effectful_stateful_contract`
   = note: this error originates in the macro `$crate::__obzenflow_assert_effectful_stateful_contract` which comes from the expansion of the macro `obzenflow_dsl::effectful_stateful` (in Nightly builds, run with -Z macro-backtrace for more info)
